# python-dns-gen-reverse

./: .gitignore  README.md  setup.cfg  setup.py
src/gen_reverse/: AddressCollector.py  DNSRRSource.py  GenReverseConfig.py  ZoneFileSyntaxError.py  command_line.py
