[metadata]
name = python-dns-gen-reverse
version = 0.0.1
author = Simon Leinen
author_email = simon.leinen@switch.c
description = Python tool to generate DNS reverse records from forward zones
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sleinen/python-dns-gen-reverse
project_urls =
    Bug Tracker = https://github.com/sleinen/python-dns-gen-reverse/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    Operating System :: POSIX
    Topic :: Internet :: Name Service (DNS)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src